--- a/us-medical-insurance-costs.ipynb
+++ b/us-medical-insurance-costs.ipynb
@@ -93,14 +93,12 @@
         "    * Is there a difference in average charge when grouped by:\n",
         "        * Sexes?\n",
         "        * Smoker status?\n",
-        "        * Region?\n",
         "        * Number of children?\n",
         "        * NB. These variables are likely confounded!\n",
         "    * Is there a difference in average BMI when grouped by:\n",
         "        * Sexes?\n",
         "        * Smoker status?\n",
         "        * Number of children?\n",
-        "        * Region?\n",
         "        * NB. These variables are likely confounded!"
       ]
     },
@@ -218,9 +216,41 @@
       "execution_count": null
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "jukit_cell_id": "JSkIJcnpsm"
+      },
+      "source": [
+        "# Create function to calculate average BMI per group\n",
+        "def calculate_average_bmi(data):\n",
+        "    \"\"\"\n",
+        "    Function for Calculating Average BMI per Group\n",
+        "    ---\n",
+        "\n",
+        "    data = Dictionary\n",
+        "\n",
+        "    \"\"\"\n",
+        "    keys_list = list(data.keys())\n",
+        "    bmi_by_group = {}\n",
+        "    counter = 0\n",
+        "    for record in data.values():\n",
+        "        total_bmi = 0\n",
+        "        total_patients = len(record)\n",
+        "        for details in record:\n",
+        "            bmi = float(details.get(\"BMI\"))\n",
+        "            total_bmi += bmi\n",
+        "        average_bmi = total_bmi / float(total_patients)\n",
+        "        bmi_by_group.setdefault(keys_list[counter], average_bmi)\n",
+        "        counter += 1\n",
+        "    return bmi_by_group"
+      ],
+      "outputs": [],
+      "execution_count": null
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "jukit_cell_id": "KKXeCJq1xp"
+        "jukit_cell_id": "22ufR3GPdA"
       },
       "source": [
         "### Step 4.1 Sexes\n",
@@ -241,19 +271,52 @@
         "average_charges_sexes = calculate_average_charge(insurance_sex_dict)\n",
         "charge_sexes_dif = abs(average_charges_sexes[\"female\"] - average_charges_sexes[\"male\"])\n",
         "print(\n",
-        "    f\"Female patient average charge: {round(average_charges_sexes['female'], PRECISION)}\"\n",
+        "    f\"Female patients average charge: {round(average_charges_sexes['female'], PRECISION)}\"\n",
         ")\n",
-        "print(f\"Male patient average charge: {round(average_charges_sexes['male'], PRECISION)}\")\n",
+        "print(\n",
+        "    f\"Male patients average charge: {round(average_charges_sexes['male'], PRECISION)}\"\n",
+        ")\n",
         "print(f\"Difference between sexes: {round(charge_sexes_dif, PRECISION)}\")"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Created dictionary with ['female', 'male'] as the keys.\n\nFemale patient average charge: 12569.58\nMale patient average charge: 13956.75\nDifference between sexes: 1387.17\n"
+          "text": "Created dictionary with ['female', 'male'] as the keys.\n\nFemale patients average charge: 12569.58\nMale patients average charge: 13956.75\nDifference between sexes: 1387.17\n"
         }
       ],
       "execution_count": 1
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "jukit_cell_id": "t0sR9lhw9O"
+      },
+      "source": [
+        "Does average BMI differ between 'male' and 'female' patients?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "jukit_cell_id": "05H7qQsIec"
+      },
+      "source": [
+        "# Calculate the per group average BMI of Sexes\n",
+        "average_bmi_sexes = calculate_average_bmi(insurance_sex_dict)\n",
+        "bmi_sexes_dif = abs(average_bmi_sexes[\"female\"] - average_bmi_sexes[\"male\"])\n",
+        "print(f\"Female patients average BMI: {round(average_bmi_sexes['female'], PRECISION)}\")\n",
+        "print(f\"Male patients average BMI: {round(average_bmi_sexes['male'], PRECISION)}\")\n",
+        "print(f\"Difference between sexes: {round(bmi_sexes_dif, PRECISION)}\")"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Female patients average BMI: 30.38\nMale patients average BMI: 30.94\nDifference between sexes: 0.57\n"
+        }
+      ],
+      "execution_count": 2
     },
     {
       "cell_type": "markdown",
@@ -295,7 +358,112 @@
           "text": "Created dictionary with ['yes', 'no'] as the keys.\n\nSmokers average insurance charge: 32050.23\nNon-smokers average insurance charge: 8434.27\nDifference between Smokers and Non-smokers: 23615.96\n"
         }
       ],
-      "execution_count": 2
+      "execution_count": 3
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "jukit_cell_id": "cX3j53J0mJ"
+      },
+      "source": [
+        "Does average BMI differ between Smokers and Non-smokers?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "jukit_cell_id": "qoFnhEhpOv"
+      },
+      "source": [
+        "# Calculate average BMI per group\n",
+        "average_bmi_smokerstatus = calculate_average_bmi(insurance_smoker_dict)\n",
+        "bmi_smokerstatus_dif = abs(\n",
+        "    average_bmi_smokerstatus[\"yes\"] - average_bmi_smokerstatus[\"no\"]\n",
+        ")\n",
+        "print(\n",
+        "    f\"Smoking patients average BMI: {round(average_bmi_smokerstatus['yes'], PRECISION)}\"\n",
+        ")\n",
+        "print(\n",
+        "    f\"Non-smoking patients average BMI: {round(average_bmi_smokerstatus['no'], PRECISION)}\"\n",
+        ")\n",
+        "print(\n",
+        "    f\"Difference between smokers and non-smokers: {round(bmi_smokerstatus_dif, PRECISION)}\"\n",
+        ")"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Smoking patients average BMI: 30.71\nNon-smoking patients average BMI: 30.65\nDifference between smokers and non-smokers: 0.06\n"
+        }
+      ],
+      "execution_count": 4
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "jukit_cell_id": "7S76VxcnIP"
+      },
+      "source": [
+        "### Step 4.3 Number of Children\n",
+        "Is there a difference in average charge when grouped by number of children?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "jukit_cell_id": "uutu6cdBqs"
+      },
+      "source": [
+        "# Create dict with number of children as the key\n",
+        "insurance_children_dict = create_dictionary(insurance_dict, \"Children\")\n",
+        "\n",
+        "# Calculate average charge per group (number of children per patient)\n",
+        "average_charges_children = calculate_average_charge(insurance_children_dict)\n",
+        "for group in average_charges_children.items():\n",
+        "    print(\n",
+        "        f\"Average charge for patients with {group[0]} children: {round(group[1], PRECISION)} \"\n",
+        "    )"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Created dictionary with ['0', '1', '3', '2', '5', '4'] as the keys.\n\nAverage charge for patients with 0 children: 12365.98 \nAverage charge for patients with 1 children: 12731.17 \nAverage charge for patients with 3 children: 15355.32 \nAverage charge for patients with 2 children: 15073.56 \nAverage charge for patients with 5 children: 8786.04 \nAverage charge for patients with 4 children: 13850.66 \n"
+        }
+      ],
+      "execution_count": 5
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "jukit_cell_id": "Dojmy6JVuv"
+      },
+      "source": [
+        "Is there a difference in average BMI when grouped by number of children?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "jukit_cell_id": "jUXgBf7nuL"
+      },
+      "source": [
+        "# Calculate average BMI per group (number of children)\n",
+        "average_bmi_children = calculate_average_bmi(insurance_children_dict)\n",
+        "for group in average_bmi_children.items():\n",
+        "    print(\n",
+        "        f\"Average BMI for patients with {group[0]} children: {round(group[1], PRECISION)}\"\n",
+        "    )"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Average BMI for patients with 0 children: 30.55\nAverage BMI for patients with 1 children: 30.62\nAverage BMI for patients with 3 children: 30.68\nAverage BMI for patients with 2 children: 30.98\nAverage BMI for patients with 5 children: 29.61\nAverage BMI for patients with 4 children: 31.39\n"
+        }
+      ],
+      "execution_count": 6
     }
   ],
   "metadata": {
